stayledger-shared/datastores/staging/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stayledger-staging
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: staging
